--- a/assets/estilos/style.css
+++ b/assets/estilos/style.css
@@ -12,6 +12,12 @@
                 opacity .3s ease;
 }
 
+/*
+Lembrar de colocar a classe título em todos os hn
+para fazer todos eles terem aquelas configurações
+de link com o #
+*/
+
 :target {
     scroll-margin-top: 50px;
 }
@@ -56,6 +62,7 @@ a:hover {
 }
 
 header {
+    font-size: 1.3em;
     display: flex;
     justify-content: space-between;
     position: sticky;
@@ -242,6 +249,11 @@ article h3:hover::after {
     opacity: 1;
 }
 
+article .latex-bloco {
+    display: block;
+    overflow-x: auto;
+}
+
 article .latex-linha {
     display: inline-block;
     white-space: nowrap;
@@ -249,18 +261,22 @@ article .latex-linha {
 }
 
 #nav-conteiner {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     font-size: .9em;
     padding: 25px 0;
-    justify-content: space-between;
 }
 
 #nav-conteiner .ant {
+    justify-content: flex-start;
     text-align: left;
+    grid-column: 1 / 2;
 }
 
 #nav-conteiner .prox {
+    justify-content: flex-end;
     text-align: right;
+    grid-column: 2 / 3;
 }
 
 #nav-conteiner .ant, #nav-conteiner .prox {
@@ -279,7 +295,6 @@ article .latex-linha {
     align-self: center;
     margin: 0 5px;
 }
-
 
 #nav-conteiner .ant .seta {
     grid-area: 1 / 1 / 3 / 2;
