Consertei os títulos da primeira página e o link do footer

--- a/assets/estilos/style.css
+++ b/assets/estilos/style.css
@@ -323,3 +323,13 @@ footer {
 footer.overlay {
     filter: brightness(.5);
 }
+
+footer a {
+    color: var(--fonte);
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: var(--destaque);
+    text-decoration: underline;
+}
