--- a/assets/estilos/style.css
+++ b/assets/estilos/style.css
@@ -271,6 +271,10 @@ article figure .conteriner-botoes{
     margin: 10px 0;
 }
 
+article figure button {
+    user-select: none;
+}
+
 #nav-conteiner {
     display: grid;
     grid-template-columns: 1fr 1fr;
