--- a/assets/estilos/style.css
+++ b/assets/estilos/style.css
@@ -9,7 +9,9 @@
                 filter .3s ease,
                 border-color .3s ease,
                 max-height .3s ease,
-                opacity .3s ease;
+                opacity .3s ease,
+                box-shadow .3s ease;
+                
 }
 
 :root {
@@ -18,6 +20,7 @@
     --fonte: #222;
     --destaque: #0071bc;
     --cinza: #ddd;
+    --detaque-tranparente: #0071bc44
 }
 
 :target {
@@ -235,13 +238,32 @@ article .latex-linha {
     margin-left: -21px;
 }
 
+article aside {
+    border: 1px solid var(--cinza);
+    border-left: 5px solid var(--destaque);
+    border-radius: 4px;
+    box-shadow: 1px 1px 3px var(--cinza);
+}
+
+article aside h3 {
+    margin: 0;
+    padding: 8px;
+    background-color: var(--detaque-tranparente);
+    color: var(--fonte);
+    border-top-right-radius: 4px;
+}
+
+article aside p {
+    padding: 0 20px;
+}
+
 article figure {
     margin: 16px 0;
     border: 1px solid var(--cinza);
     border-radius: 8px;
 }
 
-article figure .conteirner-svg {
+article figure .conteiner-svg {
     display: flex;
     align-items: center;
     justify-content: center;
